# ncmdump-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build-release.yml  build.yml
libncm/: Cargo.toml
libncm/src/: lib.rs
ncmdumpcli/: Cargo.toml
ncmdumpcli/src/: main.rs
src/: main.rs
