[package]
name = "ncmdump-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.4"
base64 = "0.21.5"
hex = "0.4.3"
serde_json = "1.0.109"
block-modes = "0.8.1"
pkcs7 = "0.4.1"
byteorder = "1.4.3"
structopt = "0.3.24"
